--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "ionic2",
-  "version": "3.9.3",
+  "version": "3.9.2",
   "description": "A powerful framework for building mobile and progressive web apps with JavaScript and Angular",
   "keywords": [
     "ionic",
@@ -17,7 +17,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ionic-team/ionic-v3.git"
+    "url": "https://github.com/ionic-team/ionic.git"
   },
   "scripts": {
     "test": "gulp validate",
@@ -26,20 +26,20 @@
     "tsc": "tsc --outdir .tmp"
   },
   "dependencies": {
-    "@angular/common": "4.4.6",
-    "@angular/compiler": "4.4.6",
-    "@angular/compiler-cli": "4.4.6",
-    "@angular/core": "4.4.6",
-    "@angular/forms": "4.4.6",
-    "@angular/http": "4.4.6",
-    "@angular/platform-browser": "4.4.6",
-    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
     "ionicons": "~3.0.0",
-    "rxjs": "5.5.2",
+    "rxjs": "^6.4.0",
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.2",
+    "@ionic/app-scripts": "3.1.2",
     "@ionic/commit-hooks": "1.0.3",
     "@types/connect": "3.4.30",
     "@types/del": "2.2.31",
@@ -69,7 +69,7 @@
     "cross-spawn": "^5.1.0",
     "del": "2.2.2",
     "dgeni": "^0.4.7",
-    "dgeni-packages": "^0.27.1",
+    "dgeni-packages": "^0.16.10",
     "dotenv": "4.0.0",
     "event-stream": "3.3.4",
     "file-loader": "0.9.0",
@@ -97,14 +97,14 @@
     "gulp-typescript": "2.13.6",
     "gulp-uglify": "2.0.0",
     "gulp-util": "3.0.7",
-    "gulp-watch": "5.0.1",
+    "gulp-watch": "4.3.9",
     "html-entities": "1.2.0",
     "inquirer": "3.0.1",
     "ionic-cz-conventional-changelog": "1.0.0",
     "ionic-native": "^2.2.6",
     "jasmine-core": "2.5.2",
     "jasmine-node": "1.14.5",
-    "karma": "3.1.4",
+    "karma": "1.3.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-coverage": "1.1.1",
     "karma-jasmine": "1.0.2",
@@ -134,7 +134,7 @@
     "ts-node": "3.3.0",
     "tslint": "^5.4.3",
     "tslint-ionic-rules": "0.0.11",
-    "typescript": "~2.4.2",
+    "typescript": "~2.8.3",
     "vinyl": "1.2.0",
     "yargs": "5.0.0"
   },
