--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": false,
-  "name": "ionic3-angular6",
+  "name": "ionic-angular",
   "version": "3.9.2",
   "description": "A powerful framework for building mobile and progressive web apps with JavaScript and Angular",
   "keywords": [
