--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ log.txt
 .sass-cache/
 .versions/
 coverage/
-#dist/
+dist/
 node_modules/
 tmp/
 temp/
@@ -43,3 +43,4 @@ demos/src/**/*.ngfactory.ts
 demos/src/**/*.d.ts
 demos/src/**/*.metadata.json
 demos/src/**/*.css.shim.ts
+ionic-angular6/
